--- a/Sass/style.css
+++ b/Sass/style.css
@@ -166,51 +166,6 @@ a {
   transition: all 0.3s ease;
 }
 
-@media (min-width: 800px) {
-  .dropdown {
-    display: none;
-  }
-}
-
-@media (max-width: 800px) {
-  .logo {
-    width: 100px;
-    height: auto;
-  }
-  .container-ftr {
-    text-align: center;
-  }
-  .container-ftr h3, .container-ftr p {
-    margin: auto;
-    margin: 10px auto;
-  }
-  .contact-us ul {
-    padding-left: initial;
-  }
-  .col-search {
-    display: none;
-  }
-  .menu-btn {
-    display: none;
-  }
-  .navbar-btm {
-    height: 60px;
-    -webkit-box-pack: end;
-        -ms-flex-pack: end;
-            justify-content: end;
-    padding-right: 10%;
-  }
-  .dropdown button:focus + .dropdown-menu {
-    display: block;
-  }
-  .equalizer img {
-    width: 70%;
-  }
-  #playlist {
-    padding-left: 30px;
-  }
-}
-
 #in-container {
   padding: 60px 30px;
   margin-bottom: 40px;
@@ -228,7 +183,7 @@ a {
 }
 
 #in-container .contenu-home .btn {
-  width: 300px;
+  width: auto;
 }
 
 #in-container .contenu-home .btn input {
@@ -274,82 +229,59 @@ a {
   text-align: center;
   background-color: white;
   width: 100%;
+  margin: 100px 0;
 }
 
 #mu-container .container {
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  padding-top: 50px;
-  width: 80%;
+  width: 40%;
   margin: auto;
 }
 
-#mu-container .container .ap {
-  width: 300px;
-  border-radius: 50%;
-  padding: 20px 0;
-  background-image: url("/img/dot.gif");
-  background-position: center;
-  height: -webkit-min-content;
-  height: -moz-min-content;
-  height: min-content;
-}
-
-#mu-container .container .ap .ap__inner {
-  color: white;
-  font-size: 20px;
-}
-
-#mu-container .container .ap .ap__inner .ap__controls {
-  background-color: rgba(250, 246, 1, 0.363);
-  border-radius: 10px;
-  border: none;
-}
-
-#mu-container .container .ap .ap__inner .ap__controls .icon-play:hover {
-  background-color: rgba(204, 197, 197, 0.158);
-  width: 40px;
-  height: auto;
-}
-
-#mu-container .container .ap .ap__inner .volume-container {
-  width: 50px;
+#mu-container .container #printpage {
+  width: auto;
+  height: 580px;
   margin: auto;
-  margin-bottom: 10px;
-}
-
-#mu-container .container .ap .ap__inner .volume-container .volume-btn {
-  background-color: rgba(172, 255, 47, 0.11);
-  border: none;
-}
-
-#mu-container .container .ap .ap__inner .volume-container .volume-btn .icon-volume-off {
-  display: none;
-}
-
-#mu-container .container .pl-container {
-  color: black;
-  font-size: 18px;
-}
-
-#mu-container .container .pl-container ul {
-  list-style: none;
-  text-align: start;
-  background-color: rgba(128, 128, 128, 0.219);
-  border-radius: 20px;
+  background-color: black;
   padding: 30px;
 }
 
-#mu-container .container .pl-container ul li {
-  background-color: white;
-  padding: 10px;
-  border-radius: 10px;
-  margin-top: 10px;
+#mu-container .container #printpage img {
+  width: 100%;
+}
+
+#mu-container .container #printpage audio {
+  width: 100%;
+}
+
+#mu-container .container #printpage .infosTrack {
+  background-color: black;
+  color: white;
+  font-size: 18px;
+  margin-bottom: 70px;
+}
+
+#mu-container .container #printpage .infosTrack span {
+  color: rgba(250, 246, 1, 0.363);
+}
+
+#mu-container .container .buttons {
+  width: auto;
+}
+
+#mu-container .container .buttons button {
+  border: none;
+  font-weight: bold;
+  margin-top: -110px;
+  position: absolute;
+  cursor: pointer;
+}
+
+#mu-container .container .buttons #back {
+  left: 35%;
+}
+
+#mu-container .container .buttons #next {
+  right: 35%;
 }
 
 #slideshow-container {
@@ -515,5 +447,56 @@ footer .container-ftr .contact-us ul li {
   list-style: none;
   padding-bottom: 10px;
   color: white;
+}
+
+@media (min-width: 800px) {
+  .dropdown {
+    display: none;
+  }
+}
+
+@media (max-width: 800px) {
+  .logo {
+    width: 100px;
+    height: auto;
+  }
+  .container-ftr {
+    text-align: center;
+  }
+  .container-ftr h3, .container-ftr p {
+    margin: auto;
+    margin: 10px auto;
+  }
+  .contact-us ul {
+    padding-left: initial;
+  }
+  .col-search {
+    display: none;
+  }
+  .menu-btn {
+    display: none;
+  }
+  .navbar-btm {
+    height: 60px;
+    -webkit-box-pack: end;
+        -ms-flex-pack: end;
+            justify-content: end;
+    padding-right: 10%;
+  }
+  .dropdown button:focus + .dropdown-menu {
+    display: block;
+  }
+  .equalizer img {
+    width: 70%;
+  }
+  #playlist {
+    padding-left: 30px;
+  }
+  #mu-container .container {
+    width: 80%;
+  }
+  #mu-container .container #printpage {
+    height: auto;
+  }
 }
 /*# sourceMappingURL=style.css.map */
