--- a/Sass/style.css
+++ b/Sass/style.css
@@ -213,7 +213,8 @@ a {
 }
 
 #in-container .contenu-home .btn1 {
-  width: 20%;
+  width: auto;
+  padding: 10px;
   border: 1px solid black;
   margin: 0 20px;
 }
