--- a/Sass/style.css
+++ b/Sass/style.css
@@ -210,13 +210,15 @@ a {
   padding: 10px;
   border-radius: 10px;
   width: 60px;
+  margin-left: 20px;
 }
 
 #in-container .contenu-home .btn1 {
   width: auto;
   padding: 10px;
   border: 1px solid black;
-  margin: 0 20px;
+  margin: 10px 20px;
+  padding-right: 30px;
 }
 
 #mu-container {
